# rdisas

./: Cargo.toml  README.md
src/: .elf.rs.rustfmt  app.rs  disas.rs  dwarf.rs  elf.rs  elf_disas.rs  events.rs  main.rs  term.rs
src/term/: cmd.rs  events.rs  logger.rs  mod.rs  term.rs  tui.rs  ui.rs
src/term/frames/: func_asm.rs  func_list.rs  mod.rs
