[package]
name = "disas"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
elf = "0.7.1"
tui = { package = "ratatui", version = "0.21.0", features = ["all-widgets"]}
log = {version = "0.4", features = ["max_level_debug", "release_max_level_warn"]}
env_logger = "0.9.0"
memmap = "0.7.0"
crossterm = "0.25"
capstone = "0.11.0"
rust-fuzzy-search = { git = "https://gitlab.com/EnricoCh/rust-fuzzy-search"}
fuzzy_match = "0.2.1"
itertools = "0.11.0"
gimli = "0.28.1"
object = { version = "0.32.0"}
lazy_static = { version = "*"}
